--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <title> Scoreboard </title>
 </head>
 <body>
 
     <div class="scoreboard">
         <div class="home-scoreboard">
-            <p> HOME </p>
-            <div>
+            <p class="home-title"> HOME </p>
+            <div class="home-scorebg">
                 <p id="home-score"> 0 </p>
             </div>
-            <button id="home-score1"> +1 </button>
-            <button id="home-score2"> +2 </button>
-            <button id="home-score3"> +3 </button>
+            <div class="home-buttons">
+                <button id="home-score1"> +1 </button>
+                <button id="home-score2"> +2 </button>
+                <button id="home-score3"> +3 </button>
+            </div>
         </div>
         <div class="guest-scoreboard">
             <p> GUEST </p>
