Guest Scoreboard Styling

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
             </div>
         </div>
         <div class="guest-scoreboard">
-            <p> GUEST </p>
-            <div>
+            <p class="guest-title"> GUEST </p>
+            <div class="guest-scorebg">
                 <p id="guest-score"> 0 </p>
             </div>
-            <button id="guest-score1"> +1 </button>
-            <button id="guest-score2"> +2 </button>
-            <button id="guest-score3"> +3 </button>
+            <div class="guest-buttons">
+                <button id="guest-score1"> +1 </button>
+                <button id="guest-score2"> +2 </button>
+                <button id="guest-score3"> +3 </button>
+            </div>
         </div>
     </div>
     
